--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,17 @@
 {
     "name": "handmadeweb/frosty",
+    "license": "MIT",
+    "require": {
+        "php": "^8.0",
+        "statamic/cms": "^3.1"
+    },
+    "require-dev": {
+        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+    },
     "autoload": {
         "psr-4": {
             "HandmadeWeb\\Frosty\\": "src"
