--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "statamic/cms": "^3.1"
+        "statamic/cms": "^3.1 || ^3.2"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0 || ^5.0 || ^6.0"
