--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "statamic/cms": "3.1.* || 3.2.*"
+        "statamic/cms": "3.1.*||3.2.*||3.3.*"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0"
+        "orchestra/testbench": "^4.0||^5.0||^6.0"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
